Create github workflow